--- a/HTML File.html
+++ b/HTML File.html
@@ -2,78 +2,7 @@
 <html>
 <head>
     <title>BiographyBot</title>
-    <style>
-        /* CSS Styles */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
-
-        header {
-            background-color: #4287f5;
-            padding: 20px;
-            text-align: center;
-            color: #ffffff;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 32px;
-        }
-
-        main {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-gap: 20px;
-            margin-top: 20px;
-        }
-
-        .sidebar {
-            background-color: #ffffff;
-            padding: 20px;
-            border: 2px solid #d2d2d2;
-            border-radius: 4px;
-        }
-
-        .content {
-            background-color: #ffffff;
-            padding: 20px;
-            border: 2px solid #d2d2d2;
-            border-radius: 4px;
-        }
-
-        footer {
-            background-color: #4287f5;
-            padding: 10px;
-            text-align: center;
-            color: #ffffff;
-        }
-
-        label {
-            color: #333333;
-        }
-
-        input[type="text"] {
-            padding: 10px;
-            border: 1px solid #d2d2d2;
-            border-radius: 4px;
-        }
-
-        button {
-            background-color: #4287f5;
-            color: #ffffff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <header>
@@ -83,13 +12,219 @@
 
 <main>
     <div class="sidebar">
-        <h2>Character Biography</h2>
-        <!-- Form to input name and generate biography -->
+        <h2>Character's Biography</h2>
         <form id="biographyForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter the character's name" required>
-            <button type="submit">Generate</button>
+            <!-- Basic Information -->
+            <div class="section">
+                <h3>Basic Information</h3>
+                <div class="field">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Enter the character's name" required>
+                </div>
+                <div class="field">
+                    <label for="age">Age:</label>
+                    <input type="text" id="age" name="age" placeholder="Enter the character's age" required>
+                </div>
+                <div class="field">
+                    <label for="gender">Gender:</label>
+                    <input type="text" id="gender" name="gender" placeholder="Enter the character's gender" required>
+                </div>
+                <div class="field">
+                    <label for="description">Physical Description:</label>
+                    <input type="text" id="description" name="description" placeholder="Enter the character's physical description" required>
+                </div>
+            </div>
+
+            <!-- Background -->
+            <div class="section">
+                <h3>Background</h3>
+                <div class="field">
+                    <label for="birthplace">Birthplace:</label>
+                    <input type="text" id="birthplace" name="birthplace" placeholder="Enter the character's birthplace" required>
+                </div>
+                <div class="field">
+                    <label for="family">Family:</label>
+                    <input type="text" id="family" name="family" placeholder="Enter the character's family information" required>
+                </div>
+                <div class="field">
+                    <label for="education">Education:</label>
+                    <input type="text" id="education" name="education" placeholder="Enter the character's education" required>
+                </div>
+                <div class="field">
+                    <label for="occupation">Occupation:</label>
+                    <input type="text" id="occupation" name="occupation" placeholder="Enter the character's occupation" required>
+                </div>
+                <div class="field">
+                    <label for="socialStatus">Social Status:</label>
+                    <input type="text" id="socialStatus" name="socialStatus" placeholder="Enter the character's social status" required>
+                </div>
+            </div>
+
+            <!-- Personality Traits -->
+            <div class="section">
+                <h3>Personality Traits</h3>
+                <div class="field">
+                    <label for="positiveTraits">Positive Traits:</label>
+                    <input type="text" id="positiveTraits" name="positiveTraits" placeholder="Enter the character's positive traits" required>
+                </div>
+                <div class="field">
+                    <label for="negativeTraits">Negative Traits:</label>
+                    <input type="text" id="negativeTraits" name="negativeTraits" placeholder="Enter the character's negative traits" required>
+                </div>
+                <div class="field">
+                    <label for="quirksHabits">Quirks or Habits:</label>
+                    <input type="text" id="quirksHabits" name="quirksHabits" placeholder="Enter the character's quirks or habits" required>
+                </div>
+                <div class="field">
+                    <label for="strengths">Strengths:</label>
+                    <input type="text" id="strengths" name="strengths" placeholder="Enter the character's strengths" required>
+                </div>
+                <div class="field">
+                    <label for="weaknesses">Weaknesses:</label>
+                    <input type="text" id="weaknesses" name="weaknesses" placeholder="Enter the character's weaknesses" required>
+                </div>
+            </div>
+
+            <!-- Motivations and Goals -->
+            <div class="section">
+                <h3>Motivations and Goals</h3>
+                <div class="field">
+                    <label for="shortTermGoals">Short-term Goals:</label>
+                    <input type="text" id="shortTermGoals" name="shortTermGoals" placeholder="Enter the character's short-term goals" required>
+                </div>
+                <div class="field">
+                    <label for="longTermGoals">Long-term Goals:</label>
+                    <input type="text" id="longTermGoals" name="longTermGoals" placeholder="Enter the character's long-term goals" required>
+                </div>
+                <div class="field">
+                    <label for="characterDrive">What drives the character?</label>
+                    <input type="text" id="characterDrive" name="characterDrive" placeholder="Enter what drives the character" required>
+                </div>
+            </div>
+
+            <!-- Relationships -->
+            <div class="section">
+                <h3>Relationships</h3>
+                <div class="field">
+                    <label for="significantRelationships">Significant Relationships:</label>
+                    <input type="text" id="significantRelationships" name="significantRelationships" placeholder="Enter the character's significant relationships" required>
+                </div>
+                <div class="field">
+                    <label for="friends">Friends:</label>
+                    <input type="text" id="friends" name="friends" placeholder="Enter the character's friends" required>
+                </div>
+                <div class="field">
+                    <label for="enemies">Enemies:</label>
+                    <input type="text" id="enemies" name="enemies" placeholder="Enter the character's enemies" required>
+                </div>
+                <div class="field">
+                    <label for="romanticInterests">Romantic Interests:</label>
+                    <input type="text" id="romanticInterests" name="romanticInterests" placeholder="Enter the character's romantic interests" required>
+                </div>
+            </div>
+
+            <!-- Past Experiences -->
+            <div class="section">
+                <h3>Past Experiences</h3>
+                <div class="field">
+                    <label for="majorLifeEvents">Major Life Events:</label>
+                    <input type="text" id="majorLifeEvents" name="majorLifeEvents" placeholder="Enter the character's major life events" required>
+                </div>
+                <div class="field">
+                    <label for="traumasChallenges">Traumas or Challenges:</label>
+                    <input type="text" id="traumasChallenges" name="traumasChallenges" placeholder="Enter the character's traumas or challenges" required>
+                </div>
+                <div class="field">
+                    <label for="turningPoints">Turning Points:</label>
+                    <input type="text" id="turningPoints" name="turningPoints" placeholder="Enter the character's turning points" required>
+                </div>
+            </div>
+
+            <!-- Beliefs and Values -->
+            <div class="section">
+                <h3>Beliefs and Values</h3>
+                <div class="field">
+                    <label for="religiousViews">Religious or Spiritual Views:</label>
+                    <input type="text" id="religiousViews" name="religiousViews" placeholder="Enter the character's religious or spiritual views" required>
+                </div>
+                <div class="field">
+                    <label for="politicalViews">Political Views:</label>
+                    <input type="text" id="politicalViews" name="politicalViews" placeholder="Enter the character's political views" required>
+                </div>
+                <div class="field">
+                    <label for="moralCode">Moral Code:</label>
+                    <input type="text" id="moralCode" name="moralCode" placeholder="Enter the character's moral code" required>
+                </div>
+            </div>
+
+            <!-- Inner Conflict -->
+            <div class="section">
+                <h3>Inner Conflict</h3>
+                <div class="field">
+                    <label for="ego">Ego:</label>
+                    <input type="text" id="ego" name="ego" placeholder="Enter the character's ego" required>
+                </div>
+                <div class="field">
+                    <label for="id">Id:</label>
+                    <input type="text" id="id" name="id" placeholder="Enter the character's id" required>
+                </div>
+                <div class="field">
+                    <label for="superego">Superego:</label>
+                    <input type="text" id="superego" name="superego" placeholder="Enter the character's superego" required>
+                </div>
+                <div class="field">
+                    <label for="defenseMechanisms">Defense Mechanisms:</label>
+                    <input type="text" id="defenseMechanisms" name="defenseMechanisms" placeholder="Enter the character's defense mechanisms" required>
+                </div>
+            </div>
+
+            <!-- External Conflict -->
+            <div class="section">
+                <h3>External Conflict</h3>
+                <div class="field">
+                    <label for="externalObstacles">What external obstacles or conflicts does the character encounter?</label>
+                    <input type="text" id="externalObstacles" name="externalObstacles" placeholder="Enter the character's external obstacles or conflicts" required>
+                </div>
+            </div>
+
+            <!-- Character Arc -->
+            <div class="section">
+                <h3>Character Arc</h3>
+                <div class="field">
+                    <label for="characterEvolution">How does the character evolve or change throughout the story?</label>
+                    <input type="text" id="characterEvolution" name="characterEvolution" placeholder="Enter the character's evolution" required>
+                </div>
+                <div class="field">
+                    <label for="keyMoments">Key moments in the character's development:</label>
+                    <input type="text" id="keyMoments" name="keyMoments" placeholder="Enter the character's key moments" required>
+                </div>
+            </div>
+
+            <!-- Symbolism or Themes -->
+            <div class="section">
+                <h3>Symbolism or Themes</h3>
+                <div class="field">
+                    <label for="symbolicElements">Are there any symbolic elements associated with the character?</label>
+                    <input type="text" id="symbolicElements" name="symbolicElements" placeholder="Enter the character's symbolic elements" required>
+                </div>
+                <div class="field">
+                    <label for="themeConnection">How does the character connect to the story's themes?</label>
+                    <input type="text" id="themeConnection" name="themeConnection" placeholder="Enter the character's connection to themes" required>
+                </div>
+            </div>
+
+            <!-- Writing Notes -->
+            <div class="section">
+                <h3>Writing Notes</h3>
+                <div class="field">
+                    <label for="additionalNotes">Any additional notes, ideas, or inspirations related to the character:</label>
+                    <input type="text" id="additionalNotes" name="additionalNotes" placeholder="Enter any additional notes" required>
+                </div>
+            </div>
+
+            <button type="submit">Generate Biography</button>
         </form>
+
         <!-- Placeholder for generated biography output -->
         <div id="biographyOutput"></div>
     </div>
@@ -111,110 +246,7 @@
     &copy; 2023 BiographyBot. All rights reserved.
 </footer>
 
-<script>
-    // JavaScript code
-    const biographyForm = document.getElementById('biographyForm');
-    const biographyOutput = document.getElementById('biographyOutput');
-    const chatForm = document.getElementById('chatForm');
-    const chatInput = document.getElementById('chatInput');
-    const chatMessages = document.getElementById('chatMessages');
-    const titleElement = document.querySelector('.sidebar h2');
-
-    biographyForm.addEventListener('submit', function(event) {
-        event.preventDefault();
-
-        const name = document.getElementById('name').value;
-        generateBiography(name);
-        updateTitle(name);
-    });
-
-    function generateBiography(name) {
-        // Clear any existing output
-        biographyOutput.innerHTML = '';
-
-        // Add your logic here to generate the biography
-        const template = `
-            <h3>Basic Information:</h3>
-            <label for="age">Age:</label>
-            <input type="text" id="age" name="age" placeholder="Enter the character's age" required>
-            <br>
-            <label for="gender">Gender:</label>
-            <input type="text" id="gender" name="gender" placeholder="Enter the character's gender" required>
-            <br>
-            <label for="description">Physical Description:</label>
-            <input type="text" id="description" name="description" placeholder="Enter the character's physical description" required>
-            <br>
-
-            <h3>Background:</h3>
-            <label for="birthplace">Birthplace:</label>
-            <input type="text" id="birthplace" name="birthplace" placeholder="Enter the character's birthplace" required>
-            <br>
-            <label for="family">Family:</label>
-            <input type="text" id="family" name="family" placeholder="Enter the character's family" required>
-            <br>
-            <label for="education">Education:</label>
-            <input type="text" id="education" name="education" placeholder="Enter the character's education" required>
-            <br>
-            <label for="occupation">Occupation:</label>
-            <input type="text" id="occupation" name="occupation" placeholder="Enter the character's occupation" required>
-            <br>
-            <label for="social-status">Social Status:</label>
-            <input type="text" id="social-status" name="social-status" placeholder="Enter the character's social status" required>
-            <br>
-
-            <h3>Personality Traits:</h3>
-            <label for="positive-traits">Positive Traits:</label>
-            <input type="text" id="positive-traits" name="positive-traits" placeholder="Enter the character's positive traits" required>
-            <br>
-            <label for="negative-traits">Negative Traits:</label>
-            <input type="text" id="negative-traits" name="negative-traits" placeholder="Enter the character's negative traits" required>
-            <br>
-            <label for="quirks">Quirks or Habits:</label>
-            <input type="text" id="quirks" name="quirks" placeholder="Enter the character's quirks or habits" required>
-            <br>
-            <label for="strengths">Strengths:</label>
-            <input type="text" id="strengths" name="strengths" placeholder="Enter the character's strengths" required>
-            <br>
-            <label for="weaknesses">Weaknesses:</label>
-            <input type="text" id="weaknesses" name="weaknesses" placeholder="Enter the character's            weaknesses" required>
-            <br>
-
-            <h3>Motivations and Goals:</h3>
-            <label for="short-term-goals">Short-term Goals:</label>
-            <input type="text" id="short-term-goals" name="short-term-goals" placeholder="Enter the character's short-term goals" required>
-            <br>
-            <label for="long-term-goals">Long-term Goals:</label>
-            <input type="text" id="long-term-goals" name="long-term-goals" placeholder="Enter the character's long-term goals" required>
-            <br>
-            <label for="drives">What drives the character?</label>
-            <input type="text" id="drives" name="drives" placeholder="Enter what drives the character" required>
-            <br>
-
-            <h3>Relationships:</h3>
-            <label for="significant-relationships">Significant Relationships:</label>
-            <input type="text" id="significant-relationships" name="significant-relationships" placeholder="Enter the character's significant relationships" required>
-            <br>
-            <label for="friends">Friends:</label>
-            <input type="text" id="friends" name="friends" placeholder="Enter the character's friends" required>
-            <br>
-            <label for="enemies">Enemies:</label>
-            <input type="text" id="enemies" name="enemies" placeholder="Enter the character's enemies" required>
-            <br>
-            <label for="romantic-interests">Romantic Interests:</label>
-            <input type="text" id="romantic-interests" name="romantic-interests" placeholder="Enter the character's romantic interests" required>
-            <br>
-
-            <!-- Rest of the form fields -->
-
-        `;
-
-        // Display the generated biography form
-        biographyOutput.innerHTML = template;
-    }
-
-    function updateTitle(name) {
-        titleElement.textContent = `${name}'s Biography`;
-    }
-</script>
+<script src="script.js"></script>
 </body>
 </html>
+
